Fixes in downloads, buying process, and links sections, not showing in David version

--- a/hallocasa-web/src/main/webapp/resources/css/old/downloads.css
+++ b/hallocasa-web/src/main/webapp/resources/css/old/downloads.css
@@ -20,14 +20,14 @@
     width: 24px;
     height: 24px;
     background-size: 100% 100%;
-    background-image: url('../images/icons/folder-48.png');
+    background-image: url('../../images/icons/folder-48.png');
 }
 
 .downloads-tree .ui-icon-document{
     width: 24px;
     height: 24px;
     background-size: 100% 100%;
-    background-image: url('../images/icons/file-48.png');
+    background-image: url('../../images/icons/file-48.png');
 }
 #downloads-container{
     margin-top: 30px;
